2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: build fix

2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/Makefile.am:
	* data/schemas.sh: added, generates the
	totem-video-thumbnail.schemas.in from the totem.keys file
	* data/totem.schemas.in: fixed the default value for show_vfx

2003-01-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: remove STABLE/UNSTABLE stuff
	* data/Makefile.am: fix user-install (Closes: #102987), patch by
	jogzh001@sneakemail.com
	* src/Makefile.am: ditto configure.in
	* src/bacon-cd-selection.[ch]:
	* src/cd-drive.[ch]:
	* src/egg-*.[ch]: upd from libegg and libbacon
	* src/totem-video-thumbnailer.c: (main):
	* src/totem.c: (totem_action_play),
	(totem_action_set_mrl_and_play), (totem_action_fullscreen_toggle),
	(totem_action_set_mrl): fix time display, and the properties window

2003-01-09  Christian Neumair  <chris@gnome-de.org>

	* src/.cvsignore: Added list_cddrives.

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_open):
	* src/totem.c: (totem_action_set_mrl_and_play),
	(totem_action_play_media), (totem_action_play_pause),
	(totem_action_set_mrl), (totem_action_previous),
	(totem_action_next), (drop_cb), (on_open1_activate),
	(playlist_changed_cb), (current_removed_cb), (main):
	* src/totem.h: removed debug, fixed typo in the decoder error
	(Closes: #102851), handle failed open better than we do now

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/egg-*.[ch]: Add these files for the benefit of the i18n people
	(Closes: #102777)

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (get_fourcc_string), (gtk_xine_open):
	add error checking to gtk_xine_open, nicked get_fourcc_string from
	xine-ui

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_about1_activate): fix small leak (spotted by
	Alex Duggan)
